--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <meta property="og:description" content="Restaurant brunch à Bordeaux. Cuisine maison, produits frais locaux, ambiance chaleureuse. Ouvert mar-dim 10h-16h." />
     <meta property="og:type" content="restaurant" />
     <meta property="og:url" content="https://brunchhousebordeaux.fr" />
-    <meta property="og:image" content="%PUBLIC_URL%/images/presentation1.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/logoBrunch.png" />
     <meta property="og:locale" content="fr_FR" />
     <meta property="og:site_name" content="Brunch House Bordeaux" />
     
@@ -27,7 +27,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Brunch House Bordeaux | Restaurant Brunch" />
     <meta name="twitter:description" content="Le brunch comme vous ne l'avez jamais imaginé. Cuisine maison, produits frais, ambiance unique." />
-    <meta name="twitter:image" content="%PUBLIC_URL%/images/presentation1.png" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/logoBrunch.png" />
     
     <!-- Business Information -->
     <meta name="geo.region" content="FR-33" />
@@ -49,7 +49,7 @@
       "@context": "https://schema.org",
       "@type": "Restaurant",
       "name": "Brunch House Bordeaux",
-      "image": "%PUBLIC_URL%/images/presentation1.png",
+      "image": "%PUBLIC_URL%/logoBrunch.png",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "3 rue Ferbos",
