--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logoBrunch.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/logoBrunch.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/logoBrunch.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#1C3F33" />
     
