--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,12 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logoBrunch.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/logoBrunch.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/logoBrunch.png" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" sizes="48x48" type="image/png" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon" />
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32.png" />
+    <link rel="icon" type="image/png" sizes="48x48" href="%PUBLIC_URL%/favicon-48.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="%PUBLIC_URL%/favicon-96.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#1C3F33" />
     
